demos/grpc/user-server/kube/base/users-server.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-grpc-users
spec:
  selector:
    matchLabels:
      app: demo-grpc-users
  template:
    metadata:
      labels:
        app: demo-grpc-users
        component: server
    spec:
      containers:
      - name: demo-grpc-users
        image: demo-grpc-users
        resources:
          limits:
            memory: "128Mi"
            cpu: "125m"
        ports:
        - containerPort: 5000
          name: grpc
