demos/grpc/user-server/kube/base/users-server.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-grpc-users
spec:
  selector:
    app: demo-grpc-users
    component: server
  ports:
  - name: grpc
    port: 5000
    targetPort: grpc
