demos/grpc/user-server/kube/base/users-server.ingress.yaml
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
#     cert-manager.io/cluster-issuer: "letsencrypt-prod"
#     nginx.ingress.kubernetes.io/ssl-redirect: "true"
#   name: presentation-static-files
# spec:
#   rules:
#   - host: apps.v2tools.com
#     http:
#       paths:
#       - path: /presentations/
#         backend:
#           serviceName: presentation-static-files
#           servicePort: http
        
#   tls:
#   - hosts:
#     - apps.v2tools.com
#     secretName: apps-v2tools-crt
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: demo-grpc-users
spec:
  rules:
  - host: users.grpc.demo.apps.v2tools.com
    http:
      paths:
      - path: /
        backend:
          serviceName: demo-grpc-users
          servicePort: grpc
        
  tls:
  - hosts:
    - users.grpc.demo.apps.v2tools.com
    secretName: users-grpc-demo-apps-v2tools-crt
